Fix center aligned images

--- a/scss/modules/media.scss
+++ b/scss/modules/media.scss
@@ -1,4 +1,15 @@
 /**
+ * Fix ckeditor image align via "add media"
+ */
+div.align-center img,
+figure.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: max-content;
+}
+
+/**
  * Fix ckeditor videos aspect ratio
  */
 .field--name-field-media-oembed-video {
